--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.4.0",
+    "openai": "^3.2.1",
     "pinia": "^2.1.3",
     "unplugin-auto-import": "^0.16.0",
     "unplugin-vue-components": "^0.24.1",
