--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,7 +20,8 @@
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true,
     "paths": {
-      "@/*": ["src/*"]
+      "@/*": ["src/*"],
+      "/*": ["public/*"]
     },
     "baseUrl": "."
   },
