添加了一下音乐，和主页的鼠标录制..提交记录好乱..

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,7 +23,7 @@
       "@/*": ["src/*"],
       "/*": ["public/*"]
     },
-    "baseUrl": "."
+    "baseUrl": ".",
   },
   "include": [
     "src/**/*.ts",
