--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "axios": "^1.4.0",
+    "clipboard": "^2.0.11",
     "openai": "^3.2.1",
     "pinia": "^2.1.3",
     "unplugin-auto-import": "^0.16.0",
@@ -19,6 +20,7 @@
   },
   "devDependencies": {
     "@types/node": "^20.2.1",
+    "@vicons/ionicons5": "^0.12.0",
     "@vitejs/plugin-vue": "^4.1.0",
     "naive-ui": "^2.34.3",
     "sass": "^1.62.1",
